# time-series

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  workspace.toml
.github/ISSUE_TEMPLATE/: Bug.md  Epic.md  Subtask.md  Task.md  User Story.md
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 096d037beb21_now_head.py  133c9e8e78f0_added_status_column_to_analyses_table.py  244d2395ac22_added_anomaly_table.py  3158ca6e3e73_changed_forecasting_to_work_with_the_.py  34f095b555d4_added_status_column_to_analyses_table.py  3571e1ef04d0_added_status_column_to_analyses_table.py  42b57befbbfe_fixed_relationship_between_analyses_and_.py  47a2b1597a87_initial_tables.py  63e176384658_add_anomaly_and_analysis_table.py  7d25c94f4d1c_initial_migration.py  8565ff01dc67_fixed_relationship_between_analyses_and_.py  9115ce03c384_changed_the_name_of_the_analysis_model_.py  a2a07af82d7b_initial.py  ab4fd44eb440_forcasting_merged_version.py  b1681f39a192_added_anomaly_table.py  ce068111380e_add_prediction_results.py  dafa84e58226_update_foreign_key_reference_to_.py  e54dea3e1c41_rename_tables_to_plural_form.py  f6fbdc23912f_remove_start_date_from_dataset_model.py  fa61e0cbfae7_create_timeseries_schema.py  fea28f6fceb8_initial.py
alembic/versions_backup/: af4f3f40edc7_.py
bases/time_series/api/: __init__.py  __main__.py  helpers.py  main.py  pagination.py  uvicorn_runner.py
bases/time_series/api/routes/: analyses.py  datasets.py
bases/time_series/forecasting/: __init__.py  main.py
bases/time_series/forecasting_api/: __init__.py  __main__.py  helpers.py  main.py
bases/time_series/forecasting_api/routes/: forecasting.py
bases/time_series/outlier_detection/: __init__.py  main.py
bases/time_series/outlier_detection_api/: __init__.py  __main__.py  helpers.py  main.py
bases/time_series/outlier_detection_api/routes/: analyze.py
bases/time_series/rest_api/: __init__.py  core.py  main.py  old.py  requestModels.py
components/time_series/LSTM/: energy_lstm_model.keras  lstm_energy_model1.keras  scalers.pkl
components/time_series/database/: __init__.py  engine.py  models.py  repository.py  service.py  unit_of_work.py
components/time_series/dataset_service/: __init__.py  overview_service.py  upload_service.py
components/time_series/forecast/: __init__.py  data_service.py  prediction.py  weather.py
components/time_series/forecasting/: __init__.py  data_service.py  prediction.py
components/time_series/forecasting/assets/: lstm_energy_model.keras  lstm_energy_weather_model.keras
components/time_series/greeting/: __init__.py  main.py
components/time_series/model/: __init__.py  core.py
components/time_series/outlier_detection/: __init__.py  datasets.py  helpers.py  models.py  run.py  trainer.py
components/time_series/services/: __init__.py  overview_service.py  upload_service.py
components/time_series/settings/: __init__.py  config.py  core.py
components/time_series/uvicorn_runner/: __init__.py  core.py  logging_utils.py
data/: scalers.pkl
deployments/: docker-compose.yml
development/: example.py  sofie.py  sofie_csv_standardization.py  sofie_lstm.py  sofie_new.py  sofie_outlier_detection.py  standardize_numpy_to_csv.py
projects/api/: .env.example  Containerfile  pyproject.toml
projects/forecasting/: Containerfile  pyproject.toml
projects/forecasting_api/: Containerfile  pyproject.toml
projects/outlier_detection/: Containerfile  pyproject.toml
projects/outlier_detection_api/: .env.example  Containerfile  pyproject.toml
projects/rest_api/: Containerfile  pyproject.toml
scripts/: serve  setup
test/bases/time_series/api/: conftest.py  test_datasets.py
test/bases/time_series/rest_api/: test_core.py
test/components/time_series/database/: test_core.py  test_database.py  test_repository.py  test_unit_of_work.py
test/components/time_series/dataset_service/: test_overview_service.py  test_upload_service.py
test/components/time_series/forecasting/: test_prediction.py
test/components/time_series/model/: test_core.py
test/components/time_series/services/: test_overview_service.py  test_upload_service.py
tests/components/time_series/greeting/: test_main.py
weights/forecasting/: lstm_energy_model_v2.keras
