[project]
name = "api"
version = "1.0.0"
dependencies = [
    "alembic>0",
    "fastapi>0",
    "fastapi-pagination>0",
    "psycopg2-binary>0",
    "pydantic>0",
    "sqlmodel>0",
    "uvicorn>0",
    "torch>0",
    "torchvision>0",
    "datasets>0",
    "matplotlib>0",
    "python-dotenv>0",
]

[dependency-groups]
dev = [
    "poethepoet>0",
]

[tool.poe.tasks]
container-build = "podman build -t time_series.api:latest -f Containerfile ../.."
container-run = "podman run -it --replace --name time_series.api -p 8000:8000 time_series.api:latest"

serve = "uvicorn --reload time_series.api.main:app"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]
# This section is needed for the Hatchling build backend, to activate the polylith build hook.

#[tool.hatch.build.targets.wheel]
#packages = ["time_series"]
# This section is needed for building

[tool.polylith.bricks]
"../../bases/time_series/api" = "time_series/api"
"../../components/time_series/model" = "time_series/model"
"../../components/time_series/dataset_service" = "time_series/dataset_service"
"../../components/time_series/database" = "time_series/database"
