[project]
name = "outlier_detection_api"
version = "1.0.0"
dependencies = [
    "fastapi>0",
    "sqlmodel>0",
    "numpy>0",
    "sqlalchemy>0",
    "torch>0",
    "torchvision>0",
    "scikit-learn>0",
    "psycopg2-binary>0",
    "pydantic>0",
    "pydantic-settings>0",
    "uvicorn>0",
    "loguru>0",
]

[dependency-groups]
dev = [
    "poethepoet>0",
]

[tool.poe.tasks]
container-build = "podman build -t time_series.outlier_detection_api:latest -f Containerfile ../.."
container-run = "podman run -it --env-file=.env --replace --name time_series.outlier_detection_api -p 8001:8001 time_series.outlier_detection_api:latest"

serve = "python -m time_series.outlier_detection_api"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]
# This section is needed for the Hatchling build backend, to activate the polylith build hook.

[tool.hatch.build.targets.wheel]
packages = ["time_series"]
# This section is needed for building

[tool.polylith.bricks]
"../../bases/time_series/outlier_detection_api" = "time_series/outlier_detection_api"
"../../components/time_series/settings" = "time_series/settings"
"../../components/time_series/uvicorn_runner" = "time_series/uvicorn_runner"
"../../components/time_series/database" = "time_series/database"
"../../components/time_series/outlier_detection" = "time_series/outlier_detection"
