[project]
name = "rest_api"
version = "0.1.0"
dependencies = [
    "fastapi>0",
    "sqlmodel>0",
    "uvicorn>0",
]

[dependency-groups]
dev = [
    "poethepoet>0",
]

[tool.poe.tasks]
container-build = "podman build -t rest_api:latest -f Containerfile ../.."
container-run = "podman run -it --name rest_api rest_api:latest -p 8000:8000"

serve = "uvicorn --reload time_series.rest_api.main:app"

[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.polylith-bricks]
# This section is needed for the Hatchling build backend, to activate the polylith build hook.

#[tool.hatch.build.targets.wheel]
#packages = ["time_series"]
# This section is needed for building

[tool.polylith.bricks]
"../../bases/time_series/rest_api" = "time_series/rest_api"
"../../components/time_series/greeting" = "time_series/greeting"
"../../components/time_series/model" = "time_series/model"
